--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html>
 
   <head>
-    <head>
-    <img srs="WebBanner2023.png" alt="Banner" width="900" height="300">
+    <h2>URN 6901466 </h2>
   </head>
   
 </html>
