--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 
   <head>
-    <h2>URN 6901466 </h2>
+    <head> 
+    <img src="WebBanner.png" alt="Banner" width="900" height="300" 
+    </head>
   </head>
   
 </html>
