--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
 
   <head> 
+    <head> 
     <img src="WebBanner.png" alt="Banner" width="1200" height="300">
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6901466</h2>
+    </head> 
   </head>
   
 </html>
