--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <img src="WebBanner.png" alt="Banner" width="1200" height="300">
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6901466</h2>
+    <hr>
+    <h2 style="font-family:calibri:"><b>Conference paper: NOT NAMED YET</b></h2>
+    <hr>
     </head> 
   </head>
   
