--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <hr>
     </head> 
   </head>
+
+  <video src="VIDEO HERE.mp4" width="800" height="450" controls>
+  </video>
+  
   
 </html>
