--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         const LastCommitDate = new Date(commits[0].commit.committer.date);
 
         // Displaying the time on load
-        document.getElementById('last-updated').innertext = 'Last Modified Time: $(lastCommitDate.toLocalString())';
+        document.getElementById('last-updated').innerText = 'Last Modified Time: $(lastCommitDate.toLocalString())';
       } else {
-        document.getElementById('last-updated').innertexrt = 'No commits found in repository.';
+        document.getElementById('last-updated').innerText = 'No commits found in repository.';
       }
     } catch (error) {
       console.error('Error fetching the last updated time:', error);
@@ -56,7 +56,7 @@
   }
   // Function to verify the last update time by re-fetching it ftom the API
   async function verifyLastUpdatedTime() {
-    document.getElementById('last-updated').innertexrt = 'Verifying...';
+    document.getElementById('last-updated').innerText = 'Verifying...';
     await getLastUpdatedTime();
     alert("Last modified time has been successfully verified from GitHub API.");
   }
