--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6901466</h2>
     <hr>
-    <h2 style="font-family:calibri:"><b>Conference paper: NOT NAMED YET</b></h2>
+    <h2 style="font-family:calibri:"><b>Conference paper: Buoyant Airborne Turbine (BAT) vs Traditional Wind Turbines, which is the future of renewable energy? </b></h2>
     <hr>
   </head> 
 </head>
+
 
 <video src="VIDEO HERE.mp4" width="800" height="450" controls>
 </video>
