--- a/index.html
+++ b/index.html
@@ -10,13 +10,47 @@
     <h2 style="font-family:calibri:"><b>Conference paper: Buoyant Airborne Turbine (BAT) vs Traditional Wind Turbines, which is the future of renewable energy? </b></h2>
     <hr>
   </head> 
+  
+<!-- /////////////////////////// -->
+<!-- ///// STYLE FOR TABLE ///// -->
+<!-- /////////////////////////// -->
+
+  
+  <style>
+    table{ 
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 30%;
+    }
+
+    td, th {
+      border: 1px solid #dddddd;
+      text-aligh: left;
+      padding: 8px;
+    }
+
+    tr:nrt-child(even) {
+      background-color: #dddddd;
+    }
+  </style>
+  <style>
+    p.exl {
+      margin-left:250px;
+    }
+  </style>
 </head>
 
-
+<!-- ///////////////// -->  
+<!-- ///// VIDEO ///// -->
+<!-- ///////////////// -->
+  
 <video src="VIDEO HERE.mp4" width="800" height="450" controls>
 </video>
 
-  <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
+<!-- ////////////////////////////// -->  
+<!-- ///// ADDING LAST UPDATE ///// -->
+<!-- ////////////////////////////// -->
+
 <div id="last-updated">Loading last update time...</div>
 <!-- Verify Button -->
 <button onclick="verifyLastUpdatedTime()" style="display: block; margin: 10px auto; padding: 8px 16px;">
@@ -62,7 +96,10 @@
     window.onload = getLastUpdatedTime;
 </script>
 
-  <!-- ////////////////////////////// Word count function ////////////////////////////// -->
+<!-- ////////////////////// -->
+<!-- ///// WORD COUNT ///// -->
+<!-- ////////////////////// -->
+
 <!-- Placeholder for total word count -->
 <p id="totalWordCount"></p>
 <hr>
