--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
       margin-left:250px;
     }
   </style>
+  <hr>
+
+<!-- //////////////////// -->  
+<!-- ///// VIEWPORT ///// -->
+<!-- //////////////////// -->
+  
+<meta name="viewport" content="width=device=width, initial-scale=1">
+<link  rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+  .mySlides {display:none;}
+</style>
+
+  <p class="ex1">
+    <pre>
+    This article is an informative look at alternatives to traditional standing wind turbines and how BATs can be used in the future for sustainable energy. Evaluating each source of energy through different aspects of cost, impact, efficiency, and usefulness. 
+</pre>
+    <h3 id="Abstract">Abstract</h3>
+</p>
+                            
 </head>
 
 <!-- ///////////////// -->  
