--- a/index.html
+++ b/index.html
@@ -52,11 +52,37 @@
   .mySlides {display:none;}
 </style>
 
-  <p class="ex1">
-    <pre>
+<!-- ///////////////// -->
+<!-- ///// TABLE ///// -->
+<!-- ///////////////// -->
+
+ <table>
+   <tr>
+     <th><<h3> Table of contents </h3></th>
+   </tr>
+   <tr>
+     <td><a href="#Abstract">Abstarct</td>
+   </tr>
+   <tr>
+     <td><a href="#1 What is it?">1 What is it?</td>
+   </tr>
+   <tr>
+     <td><a href="#1.1 Evaluating cost">1.1 Evaluating cost</td>
+   </tr> 
+   <tr>
+     <td><a href="#1.2 Comparing Power Output">1.2 Comparing Power Output </td>
+   </tr>
+ </table> 
+  
+<!-- //////////////////// -->
+<!-- ///// ABSTRACT ///// -->
+<!-- //////////////////// -->
+  
+<p class="ex1">
+  <h3 id="Abstract">Abstract</h3>
+  <pre>
     This article is an informative look at alternatives to traditional standing wind turbines and how BATs can be used in the future for sustainable energy. Evaluating each source of energy through different aspects of cost, impact, efficiency, and usefulness. 
-</pre>
-    <h3 id="Abstract">Abstract</h3>
+  </pre>
 </p>
                             
 </head>
