--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
  <table>
    <tr>
-     <th><<h3> Table of contents </h3></th>
+     <th><h3> Table of contents </h3></th>
    </tr>
    <tr>
-     <td><a href="#Abstract">Abstarct</td>
+     <td><a href="#Abstract">Abstract</td>
    </tr>
    <tr>
      <td><a href="#1 What is it?">1 What is it?</td>
@@ -73,7 +73,9 @@
      <td><a href="#1.2 Comparing Power Output">1.2 Comparing Power Output </td>
    </tr>
  </table> 
-  
+
+<hr>
+
 <!-- //////////////////// -->
 <!-- ///// ABSTRACT ///// -->
 <!-- //////////////////// -->
@@ -86,6 +88,39 @@
 </p>
                             
 </head>
+
+<!-- /////////////////////////// -->
+<!-- ///// 1.0 What is it? ///// -->
+<!-- /////////////////////////// -->
+
+<p class="ex1">
+  <h3 id="1 What is it?">1 What is it?</h3>
+  <pre>
+  PARAGRATH HERE
+  </pre>
+</p>  
+
+<!-- /////////////////////////////// -->
+<!-- ///// 1.1 Evaluating Cost ///// -->
+<!-- /////////////////////////////// -->
+
+<p class="ex1">
+  <h3 id="1.1 Evaluating cost">1.1 Evaluating cost</h3>
+  <pre>
+  PARAGRATH HERE
+  </pre>
+</p> 
+
+<!-- ////////////////////////////////////// -->
+<!-- ///// 1.2 Comparing Power Output ///// -->
+<!-- ////////////////////////////////////// -->
+
+<p class="ex1">
+  <h3 id="1.2 Comparing Power Output">1.2 Comparing Power Output</h3>
+  <pre>
+  PARAGRATH HERE
+  </pre>
+</p> 
 
 <!-- ///////////////// -->  
 <!-- ///// VIDEO ///// -->
