--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 <p class="ex1">
   <h3 id="1 What is it?">1 What is it?</h3>
   <pre>
-  PARAGRATH HERE
+  Since 2015, onshore wind energy has been banned in the UK. The ban was only lifted in July 2024, (GOV.UK (2024)), which begs the question of why it was banned in the first place and whether there are any better alternatives.
+I first learned about Buoyant Airborne Turbines (BAT) through an article in Wind Systems magazine. The article said that BATs could reach heights where winds are stronger and more consistent, (staff, W.S. (2017)). So, I decided to investigate the BAT and traditional free-standing turbines to see if the UK should pivot towards using them.
   </pre>
 </p>  
 
