--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head> 
   <head> 
-    <img src="WebBanner.png" alt="Banner" width="1200" height="300">
+    <img src="WebBanner.png" alt="Banner" width="1200" height="300" class="center">
       <h1><b>   ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>   Student URN: 6901466</h2>
     <hr>
@@ -94,6 +94,13 @@
 <!-- ///// 1.0 What is it? ///// -->
 <!-- /////////////////////////// -->
 
+<head>
+  <style>
+    h3 {text-align: center;}
+    p {text-align: center;}
+  </style>
+</head>
+  
 <p class="ex1">
   <h3 id="1 What is it?">   1 What is it?</h3>
   <pre>
@@ -106,7 +113,10 @@
        So, I decided to investigate the BAT and traditional free-standing turbines to see if the UK should
        pivot towards using them.
   </pre>
-  <img src="BATPIC.png" alt="Picture of the BAT" width="300" height="200">
+  <img src="BATPIC.png" alt="Picture of the BAT" width="300" height="200" class="center">
+  <pre>
+    (Matheson, R. (2014))
+  </pre>
 </p>  
 <hr>
 
