--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h1><b>   ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>   Student URN: 6901466</h2>
     <hr>
-    <h2 style="font-family:calibri:"><b>   Conference paper: Buoyant Airborne Turbine (BAT) vs Traditional Wind Turbines, which is the future of renewable energy? </b></h2>
+    <h2 style="font-family:calibri:"><b> Conference paper: Buoyant Airborne Turbine (BAT) vs Traditional Wind Turbines, which is the future of renewable energy? </b></h2>
     <hr>
   </head> 
   
@@ -81,7 +81,7 @@
 <!-- //////////////////// -->
   
 <p class="ex1">
-  <h3 id="Abstract">   Abstract</h3>
+  <h3 id="Abstract"> Abstract</h3>
   <pre>
        This article is an informative look at alternatives to traditional standing wind turbines and how
        BATs can be used in the future for sustainable energy. Evaluating each source of energy through 
@@ -102,7 +102,7 @@
 </head>
   
 <p class="ex1">
-  <h3 id="1 What is it?">   1 What is it?</h3>
+  <h3 id="1 What is it?"> 1 What is it?</h3>
   <pre>
        Since 2015, onshore wind energy has been banned in the UK. The ban was only lifted in July 2024,
        (GOV.UK (2024)), which begs the question of why it was banned in the first place and whether there
@@ -125,9 +125,22 @@
 <!-- /////////////////////////////// -->
 
 <p class="ex1">
-  <h3 id="1.1 Evaluating cost">   1.1 Evaluating cost</h3>
+  <h3 id="1.1 Evaluating cost"> 1.1 Evaluating cost</h3>
   <pre>
-       PARAGRATH HERE
+       Initially, I started to look for how much each project cost. As stated in the magazine the BAT isn’t
+       fully commercially available, costing around $1.3 million (£1 million as of Nov 2024) for an 
+       eighteen-month project, this is a very massive cost compared to the standing turbine which comes to 
+       around £70,000, (Richardson, J. (2023)), and approximately makes 36,000kW of energy over a year.
+       However, something people don’t realize is the maintenance of wind turbines as the blades need to be
+       replaced every 20 years, and the main problem we face with disposing of the blades 
+       is that they cannot be recycled. This is because the blades are mostly made from 
+       fibreglass, (Rani, M., Choudhary, P., Krishnan, V. and Zafar, S. (2021)), which usually leads to them 
+       being thrown in landfills or incinerated, neither being good for the environment. On the other hand,
+       the BAT turbine is made from a high-performance fabric shell and to make the turbine float it is filled with a gas
+       less dense than air: a high concentration of helium, (Mohammad Abobaker Khalifa, Ali, M. and Naeem, M. (2023)).
+       This means that the BAT can be taken down and reused however just like the standing turbine, the BAT 
+       does use blades which again cannot be recycled but may be used in different means. Whereas the bat can
+       be constructed and taken down to be reused somewhere else. 
   </pre>
 </p>
 <hr>
@@ -137,13 +150,72 @@
 <!-- ////////////////////////////////////// -->
 
 <p class="ex1">
-  <h3 id="1.2 Comparing Power Output">   1.2 Comparing Power Output</h3>
+  <h3 id="1.2 Comparing Power Output"> 1.2 Comparing Power Output</h3>
   <pre>
-       PARAGRATH HERE
+       One fundamental point between the standing wind turbine and the BAT is the fact that they make power the
+       same way. They work on the same simple principle: wind turns the propeller-like blades of a turbine around
+       a rotor, which then spins a generator consequently producing electricity. The main difference is the height
+       at which the two operate. 
+  </pre>
+  <img src="GRAPH1.png" alt="Picture of the first graph" width="300" height="200" class="center"> <img src="GRAPH2.png" alt="Picture of the second graph" width="300" height="200" class="center">
+  <pre> 
+    Limpinsel, M., Kuo, D. and Vijh, A. (2018)                                            Energy Matters. (2016)        
+
+    As both the graphs show, between 0 and 10km, as the altitude increases the average windspeeds increase which 
+    means when in contact with the wind turbines the wind will transfer much more kinetic energy at higher 
+    altitudes compared to lower altitudes, the wind speeds at higher altitudes become much more consistent,
+    (Archer, C. and Caldeira, K. (2009)), making energy much more viable for long-term energy providing.
+    
+    A BAT commercial-scale project is currently around 100 m taller than the current record holder for highest wind
+    turbine which is equipped with a generator that can produce a maximum 8MW, (staff, W.S. (2017)), this means with
+    an equivalent engine, the BAT can produce much higher average power with more consistency due to its higher altitude.
+    This however is comparing the tallest standing wind turbine, in 2014, meaning compared to average wind turbines the
+    power output will be much greater comparatively.
   </pre>
 </p>
 <hr>
 </head>
+
+<!-- ////////////////////////////////////// -->
+<!-- ///// 1.3 What does the uk need ///// -->
+<!-- ////////////////////////////////////// -->
+  
+<p class="ex1">
+  <h3 id="1.3 What does the Uk need?"> 1.3 What does the Uk need?</h3>
+  <pre>
+       The goal of energy sources is to as you think, to supply energy to the country and currently the UK we consume 
+       around 287.13 billion kWh and produce 318.60 billion kWh, around 40% of which is from fossil fuels, making 30 
+       million tons of CO2 every year.
+  </pre>
+  <img src="TABLE.png" alt="Picture of the Table" width="300" height="200" class="center">
+  <pre>
+    Worlddata.info. (2014)
+
+    The BATs with an 8MW engine can make, over a period of 24hrs, 192000kWh which annually is 70176000 kWh. This means
+    that for BATs to fully replace fossil fuels we would need around 1900 BATs minimum. I understand that this does sound
+    like a lot and considering the price may be a poor choice, however I predict that over the years and with more investment
+    they will become cheaper. Additionally with the fact that BATs are lifted high into the air, they can even be installed
+    in major cities which would promote green architecture. If not that, the large surface area of BATs can be used as space
+    for advertising, generating additional revenue, or even hold general information (location, time, weather).
+  </pre>
+</p>  
+<hr>
+
+<!-- //////////////////////// -->
+<!-- ///// 2 Conclusion ///// -->
+<!-- //////////////////////// -->
+
+<p class="ex1">
+  <h3 id="2 Conclusion"> 2 Conclusion</h3>
+  <pre>
+      Overall, in my opinion, BATs are defiantly the future of renewable wind energy however due to slow progress that make 
+      take some time, by then we may have already transitioned to full renewable energy as a country. So, I encourage everyone
+      and the government to look into the turbines and potentially our cities may look greener. Personally, I do think the BATs
+      look aesthetically better than wind turbines however that isn’t something I can quantify and give reasoning for as it is 
+      just my opinion.
+  </pre>
+</p>
+<hr>
 
 <!-- ///////////////// -->  
 <!-- ///// VIDEO ///// -->
@@ -225,8 +297,11 @@
     // Calculate word count for each section and accumulate the total
     const WordCount1 = displayWordCount("1 What is it?");
     const WordCount2 = displayWordCount("1.1 Evaluating cost");
+    const WordCount3 = displayWordCount("1.2 Comparing Power Output");
+    const WordCount4 = displayWordCount("1.3 What does the Uk need?");
+    const WordCount5 = displayWordCount("2 Conclusion");
     // Calculate the sum of all selected sections
-    const totalWordCount = WordCount1 + WordCount2;
+    const totalWordCount = WordCount1 + WordCount2 + WordCount3 + WordCount4 + WordCount5;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
