--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
    <tr>
      <td><a href="#1.2 Comparing Power Output">1.2 Comparing Power Output </td>
    </tr>
+      <tr>
+     <td><a href="#1.3 What does the Uk need?">1.3 What does the Uk need? </td>
+   </tr>
+      <tr>
+     <td><a href="#2 Conclusion">2 Conclusion </td>
+   </tr>
  </table> 
 
 <hr>
@@ -187,7 +193,7 @@
        around 287.13 billion kWh and produce 318.60 billion kWh, around 40% of which is from fossil fuels, making 30 
        million tons of CO2 every year.
   </pre>
-  <img src="TABLE.png" alt="Picture of the Table" width="300" height="200" class="center">
+  <img src="TABLE.png" alt="Picture of the Table" width="700" height="200" class="center">
   <pre>
     Worlddata.info. (2014)
 
