--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
   .mySlides {display:none;}
 </style>
 
+<!-- ///////////////// -->  
+<!-- ///// VIDEO ///// -->
+<!-- ///////////////// -->
+  
+<video src="VIDEO HERE.mp4" width="800" height="450" controls>
+</video>
+  
 <!-- ///////////////// -->
 <!-- ///// TABLE ///// -->
 <!-- ///////////////// -->
@@ -78,6 +85,9 @@
       <tr>
      <td><a href="#2 Conclusion">2 Conclusion </td>
    </tr>
+      <tr>
+     <td><a href="#3 Refrences">3 Refrences </td>
+   </tr>
  </table> 
 
 <hr>
@@ -103,7 +113,7 @@
 <head>
   <style>
     h3 {text-align: center;}
-    p {text-align: center;}
+    pre {text-align: center;}
   </style>
 </head>
   
@@ -163,7 +173,7 @@
        a rotor, which then spins a generator consequently producing electricity. The main difference is the height
        at which the two operate. 
   </pre>
-  <img src="GRAPH1.png" alt="Picture of the first graph" width="300" height="200" class="center"> <img src="GRAPH2.png" alt="Picture of the second graph" width="300" height="200" class="center">
+  <img src="GRAPH1.jpg" alt="Picture of the first graph" width="300" height="200" class="center"> <img src="GRAPH2.png" alt="Picture of the second graph" width="300" height="200" class="center">
   <pre> 
     Limpinsel, M., Kuo, D. and Vijh, A. (2018)                                            Energy Matters. (2016)        
 
@@ -222,13 +232,44 @@
   </pre>
 </p>
 <hr>
-
-<!-- ///////////////// -->  
-<!-- ///// VIDEO ///// -->
-<!-- ///////////////// -->
   
-<video src="VIDEO HERE.mp4" width="800" height="450" controls>
-</video>
+<!-- /////////////////////// -->
+<!-- ///// 3 Refrences ///// -->
+<!-- /////////////////////// -->
+
+<p class="ex1">
+  <h3 id="3 Refrences"> 3 Refrences</h3>
+  <pre>
+    - GOV.UK (2024). Policy statement on onshore wind. [online] GOV.UK. Available at:
+      https://www.gov.uk/government/publications/policy-statement-on-onshore-wind/policy-statement-on-onshore-wind.
+    - staff, W.S. (2017). Going for the Record | Wind Systems Magazine. [online] Windsystemsmag.com. Available at:
+      https://www.windsystemsmag.com/going-for-the-record/ [Accessed 20 Nov. 2024].
+    - Matheson, R. (2014). High-flying turbine produces more power. [online] MIT News | Massachusetts Institute of Technology.
+      Available at: https://news.mit.edu/2014/high-flying-turbine-produces-more-power-0515.
+    - Richardson, J. (2023). How Much a Wind Turbine Costs. [online] The Renewable Energy Hub. Available at:
+      https://www.renewableenergyhub.co.uk/main/wind-turbines/how-much-does-a-wind-turbine-cost.
+    - Rani, M., Choudhary, P., Krishnan, V. and Zafar, S. (2021). A Review on Recycling and Reuse Methods for Carbon fiber/glass Fiber
+      Composites Waste from Wind Turbine Blades. Composites Part B: Engineering, p.108768.
+      doi:https://doi.org/10.1016/j.compositesb.2021.108768.
+    - Mohammad Abobaker Khalifa, Ali, M. and Naeem, M. (2023). Buoyant airborne turbines in B5G/6G wireless networks:
+      Opportunities, challenges, applications, and future directions. Computers & Electrical Engineering, 111, pp.108962–108962.
+      doi:https://doi.org/10.1016/j.compeleceng.2023.108962.
+    - Limpinsel, M., Kuo, D. and Vijh, A. (2018). SMARTS Modeling of Solar Spectra at Stratospheric Altitude and Influence on
+      Performance of Selected III-V Solar Cells. 2018 IEEE 7th World Conference on Photovoltaic Energy Conversion (WCPEC) (A Joint
+      Conference of 45th IEEE PVSC, 28th PVSEC & 34th EU PVSEC). doi:https://doi.org/10.1109/pvsc.2018.8547665.
+    - Energy Matters. (2016). High Altitude Wind Power Reviewed. [online] Available at: https://euanmearns.com/high-altitude-wind
+      power-reviewed/ [Accessed 20 Nov. 2024].
+    - Archer, C. and Caldeira, K. (2009). Global Assessment of High-Altitude Wind Power. Energies, 2(2), pp.307–319. doi:
+      https://doi.org/10.3390/en20200307. 
+    - staff, W.S. (2017). Going for the Record | Wind Systems Magazine. [online] Windsystemsmag.com. Available at:
+      https://www.windsystemsmag.com/going-for-the-record/.
+    - Worlddata.info. (2014). Energy consumption in the United Kingdom. [online] Available at:
+      https://www.worlddata.info/europe/united-kingdom/energy-consumption.php.
+  </pre>
+</p>
+<hr>
+  
+
 
 <!-- ////////////////////////////// -->  
 <!-- ///// ADDING LAST UPDATE ///// -->
