--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 <!-- ////////////////////// -->
 
 <!-- Placeholder for total word count -->
+<head>
 <p id="totalWordCount"></p>
 <hr>
 <script>
@@ -348,5 +349,5 @@
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
 </script>
-
+</head>
 </html>
