--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      <td><a href="#2 Conclusion">2 Conclusion </td>
    </tr>
       <tr>
-     <td><a href="#3 Refrences">3 Refrences </td>
+     <td><a href="#3 References">3 Refrences </td>
    </tr>
  </table> 
 
@@ -227,11 +227,11 @@
 <hr>
   
 <!-- /////////////////////// -->
-<!-- ///// 3 Refrences ///// -->
+<!-- ///// 3 References ///// -->
 <!-- /////////////////////// -->
 
 <p class="ex1">
-  <h3 id="3 Refrences"> 3 Refrences</h3>
+  <h3 id="3 References"> 3 References</h3>
   <pre>
     - GOV.UK (2024). Policy statement on onshore wind. [online] GOV.UK. Available at:
       https://www.gov.uk/government/publications/policy-statement-on-onshore-wind/policy-statement-on-onshore-wind.
