--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
      <td><a href="#Abstract">Abstract</td>
    </tr>
    <tr>
-     <td><a href="#1 What is it?">1 What is it?</td>
+     <td><a href="#1_What_is_it?">1 What is it?</td>
    </tr>
    <tr>
-     <td><a href="#1.1 Evaluating cost">1.1 Evaluating cost</td>
+     <td><a href="#1.1_Evaluating_cost">1.1 Evaluating cost</td>
    </tr> 
    <tr>
-     <td><a href="#1.2 Comparing Power Output">1.2 Comparing Power Output </td>
+     <td><a href="#1.2_Comparing_Power_Output">1.2 Comparing Power Output </td>
    </tr>
       <tr>
-     <td><a href="#1.3 What does the Uk need?">1.3 What does the Uk need? </td>
+     <td><a href="#1.3_What_does_the_Uk_need?">1.3 What does the Uk need? </td>
    </tr>
       <tr>
-     <td><a href="#2 Conclusion">2 Conclusion </td>
+     <td><a href="#2_Conclusion">2 Conclusion </td>
    </tr>
       <tr>
-     <td><a href="#3 References">3 Refrences </td>
+     <td><a href="#3_References">3 Refrences </td>
    </tr>
  </table> 
 
@@ -111,7 +111,7 @@
 <!-- /////////////////////////// -->
   
 <p class="ex1">
-  <h3 id="1 What is it?"> 1 What is it?</h3>
+  <h3 id="1_What_is_it?"> 1 What is it?</h3>
   <pre>
        Since 2015, onshore wind energy has been banned in the UK. The ban was only lifted in July 2024,
        (GOV.UK (2024)), which begs the question of why it was banned in the first place and whether there
@@ -134,7 +134,7 @@
 <!-- /////////////////////////////// -->
 
 <p class="ex1">
-  <h3 id="1.1 Evaluating cost"> 1.1 Evaluating cost</h3>
+  <h3 id="1.1_Evaluating_cost"> 1.1 Evaluating cost</h3>
   <pre>
        Initially, I started to look for how much each project cost. As stated in the magazine the BAT isn’t
        fully commercially available, costing around $1.3 million (£1 million as of Nov 2024) for an 
@@ -159,7 +159,7 @@
 <!-- ////////////////////////////////////// -->
 
 <p class="ex1">
-  <h3 id="1.2 Comparing Power Output"> 1.2 Comparing Power Output</h3>
+  <h3 id="1.2_Comparing_Power_Output"> 1.2 Comparing Power Output</h3>
   <pre>
        One fundamental point between the standing wind turbine and the BAT is the fact that they make power the
        same way. They work on the same simple principle: wind turns the propeller-like blades of a turbine around
@@ -190,7 +190,7 @@
 <!-- ////////////////////////////////////// -->
   
 <p class="ex1">
-  <h3 id="1.3 What does the Uk need?"> 1.3 What does the Uk need?</h3>
+  <h3 id="1.3_What_does_the_Uk_need?"> 1.3 What does the Uk need?</h3>
   <pre>
        The goal of energy sources is to as you think, to supply energy to the country and currently the UK we consume 
        around 287.13 billion kWh and produce 318.60 billion kWh, around 40% of which is from fossil fuels, making 30 
@@ -215,7 +215,7 @@
 <!-- //////////////////////// -->
 
 <p class="ex1">
-  <h3 id="2 Conclusion"> 2 Conclusion</h3>
+  <h3 id="2_Conclusion"> 2 Conclusion</h3>
   <pre>
       Overall, in my opinion, BATs are defiantly the future of renewable wind energy however due to slow progress that make 
       take some time, by then we may have already transitioned to full renewable energy as a country. So, I encourage everyone
@@ -231,7 +231,7 @@
 <!-- /////////////////////// -->
 
 <p class="ex1">
-  <h3 id="3 References"> 3 References</h3>
+  <h3 id="3_References"> 3 References</h3>
   <pre>
     - GOV.UK (2024). Policy statement on onshore wind. [online] GOV.UK. Available at:
       https://www.gov.uk/government/publications/policy-statement-on-onshore-wind/policy-statement-on-onshore-wind.
@@ -336,11 +336,11 @@
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const WordCount1 = displayWordCount("1 What is it?");
-    const WordCount2 = displayWordCount("1.1 Evaluating cost");
-    const WordCount3 = displayWordCount("1.2 Comparing Power Output");
-    const WordCount4 = displayWordCount("1.3 What does the Uk need?");
-    const WordCount5 = displayWordCount("2 Conclusion");
+    const WordCount1 = displayWordCount("1_What_is_it?");
+    const WordCount2 = displayWordCount("1.1_Evaluating_cost");
+    const WordCount3 = displayWordCount("1.2_Comparing_Power_Output");
+    const WordCount4 = displayWordCount("1.3_What_does_the_Uk_need?");
+    const WordCount5 = displayWordCount("2_Conclusion");
     // Calculate the sum of all selected sections
     const totalWordCount = WordCount1 + WordCount2 + WordCount3 + WordCount4 + WordCount5;
     // Display the total word count
