--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 <p class="ex1">
   <h3 id="2_Conclusion">   2 Conclusion</h3>
   <pre id="2">
-      Overall, in my opinion, BATs are defiantly the future of renewable wind energy however due to slow progress that make 
-      take some time, by then we may have already transitioned to full renewable energy as a country. So, I encourage everyone
-      and the government to look into the turbines and potentially our cities may look greener. Personally, I do think the BATs
-      look aesthetically better than wind turbines however that isn’t something I can quantify and give reasoning for as it is 
-      just my opinion.
+      Overall, in my opinion, BATs are defiantly the future of renewable wind energy, however due to slow progress that may 
+      take some time, by then we may have already transitioned to full renewable energy as a country, which is still very good.
+      So, I encourage everyone and the government to look into the turbines and potentially our cities may look greener. 
+      Personally, I do think the BATs look aesthetically better than wind turbines however that isn’t something I can quantify
+      and give reasoning for as it is just my opinion.
   </pre>
 </p>
 <hr>
