--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      <td><a href="#2_Conclusion">2 Conclusion </td>
    </tr>
       <tr>
-     <td><a href="#3_References">3 Refrences </td>
+     <td><a href="#3_References">3 References </td>
    </tr>
  </table> 
 
