--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
        are any better alternatives. 
     
        I first learned about Buoyant Airborne Turbines (BAT) through an article in Wind Systems magazine.
+       BATs are wind turines filled with a low density gas that allow it to float high in the air.
        The article said that BATs could reach heights where winds are stronger and more consistent, (staff, W.S. (2017)).
        So, I decided to investigate the BAT and traditional free-standing turbines to see if the UK should
        pivot towards using them.
