--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <!-- //////////////////// -->
   
 <p class="ex1">
-  <h3 id="Abstract">   Abstract</h3>
+    <h3 id="Abstract" style="text-align:center"> Abstract</h3>
   <pre>
        This article is an informative look at alternatives to traditional standing wind turbines and how
        BATs can be used in the future for sustainable energy. Evaluating each source of energy through 
